# librtmp

./: .gitignore  CMakeLists.txt  rtmpdump.c  rtmpgw.c  rtmpsrv.c  rtmpsuck.c
librtmp/: CMakeLists.txt  Makefile  rtmp.c  rtmp.h  rtmp_sys.h
